# c-stock-management

./: CMakeLists.txt  README.md
src/: csmconfig.c  csmconfig.h  log.c  log.h  main.c  manage.c  manage.h
